decimals precision has changed

--- a/path/src/Insurance/ContentBundle/Resources/translations/admin.ru.xliff
+++ b/path/src/Insurance/ContentBundle/Resources/translations/admin.ru.xliff
@@ -30,6 +30,14 @@
               <source>C</source>
               <target>Подтвержден</target>
             </trans-unit>
+            <trans-unit id="8">
+              <source>Pay</source>
+              <target>Оплата</target>
+            </trans-unit>
+            <trans-unit id="9">
+              <source>Additional</source>
+              <target>Дополнительные данные</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
