--- a/path/src/Insurance/ContentBundle/Resources/translations/messages.ru.xliff
+++ b/path/src/Insurance/ContentBundle/Resources/translations/messages.ru.xliff
@@ -10,6 +10,10 @@
               <source>Back</source>
               <target>Вернуться</target>
             </trans-unit>
+            <trans-unit id="3">
+              <source>Invalid CSRF token.</source>
+              <target>Недействительный токен CSRF.</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
