Calculator page finished

--- a/path/src/Insurance/ContentBundle/Resources/translations/admin.ru.xliff
+++ b/path/src/Insurance/ContentBundle/Resources/translations/admin.ru.xliff
@@ -38,6 +38,10 @@
               <source>Additional</source>
               <target>Дополнительные данные</target>
             </trans-unit>
+            <trans-unit id="10">
+              <source>General</source>
+              <target>Основные</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
