--- a/path/app/Resources/FOSUserBundle/translations/FOSUserBundle.ru.yml
+++ b/path/app/Resources/FOSUserBundle/translations/FOSUserBundle.ru.yml
@@ -58,9 +58,9 @@ registration:
 # Password resetting
 resetting:
     password_already_requested: Пароль для данного пользователя уже запрашивался за последние 24 часа.
-    check_email: Письмо на адрес %email% уже отправлено. Оно содержит ссылку, при переходе по которой ваш пароль будет сброшен.
+    check_email: Письмо на адрес %email% отправлено. Перейдите по ссылке внутри, чтобы сбросить старый пароль.
     request:
-        invalid_username: Пользователь "%username%" не существует.
+        invalid_username: Пользователя "%username%" не существует.
         username: "Имя пользователя:"
         submit: Сбросить пароль
     reset:
@@ -72,10 +72,10 @@ resetting:
         message: |
             Приветствуем %username%!
 
-            Для сброса пароля - пожалуйста пройдите по ссылке %confirmationUrl%
+            Для сброса пароля - пожалуйста перейдите по ссылке %confirmationUrl%
 
             С наилучшими пожеланиями,
-            команда сайта.
+            Администрация PolisMarket.
 
 # Global strings
 layout:
